--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -23,6 +23,19 @@
 "SCANNING"          = "Scanning...";
 "PREVIEWING"        = "Generating preview...";
 
+// Errors
+"ERROR MESSAGE SANE ERROR"                  = "SANE error";
+"ERROR MESSAGE USER CANCELLED"              = "Operation canceled";
+"ERROR MESSAGE DEVICE NOT OPENED"           = "Device is not opened";
+"ERROR MESSAGE GET VALUE TYPE BUTTON"       = "Cannot get the value of a button option";
+"ERROR MESSAGE GET VALUE TYPE GROUP"        = "Cannot get the value of a group option";
+"ERROR MESSAGE GET VALUE INACTIVE OPTION"   = "Cannot get the value of an inactive option";
+"ERROR MESSAGE SET VALUE TYPE GROUP"        = "Cannot set the value of a group option";
+"ERROR MESSAGE NO IMAGE DATA"               = "No image data";
+"ERROR MESSAGE CANNOT GENERATE IMAGE"       = "Couldn't generate image";
+"ERROR MESSAGE UNSUPPORTED CHANNELS"        = "Unsupported channel type";
+
+
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Hosts";
 "DEVICES SECTION DEVICES"   = "Devices";
