Added: contact and version in prefs Added: pods licences Updated: prefs in page sheet on iPad

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -35,7 +35,6 @@
 "ERROR MESSAGE CANNOT GENERATE IMAGE"       = "Couldn't generate image";
 "ERROR MESSAGE UNSUPPORTED CHANNELS"        = "Unsupported channel type";
 
-
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Hosts";
 "DEVICES SECTION DEVICES"   = "Devices";
@@ -50,14 +49,20 @@
 
 "PREFERENCES SECTION SCAN"      = "Scan";
 "PREFERENCES SECTION PREVIEW"   = "Preview";
+"PREFERENCES SECTION ABOUT APP" = "About this app";
 
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Preview with default color mode";
 "PREFERENCES TITLE SHOW INCOMPLETE SCAN"            = "Show incomplete scan image";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Show advanced options";
+"PREFERENCES TITLE VERSION"                         = "Version";
+"PREFERENCES TITLE CONTACT"                         = "Got some questions? Drop me an email!";
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Will use the default color mode, if auto value is supported and option is found. Allows for more consistent render accross previews, whatever the option you set, but can reduce preview speed and reset other options depending on the device.";
 "PREFERENCES MESSAGE SHOW INCOMPLETE SCAN"          = "If enabled the incomplete image during a scan operation (preview or actual scan) will be displayed on screen. On an old device or when scanning with a high resolution this is not recommended.";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Some devices have advanced options, toggling this setting ON will allow you to access them.";
+
+"MAIL COPY PASTEBOARD NAME"     = "Copy email to pasteboard";
+"CONTACT SUBJECT ABOUT APP %@"  = "About %@";
 
 // Gallery
 "GALLERY EMPTY TITLE"       = "No images yet";
