--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -50,14 +50,20 @@
 
 "PREFERENCES SECTION SCAN"      = "Acquisition";
 "PREFERENCES SECTION PREVIEW"   = "Aperçu";
+"PREFERENCES SECTION ABOUT APP" = "À propos";
 
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Mode de couleurs par défaut";
 "PREFERENCES TITLE SHOW INCOMPLETE SCAN"            = "Afficher le scan incomplet";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Afficher les options avancées";
+"PREFERENCES TITLE VERSION"                         = "Version";
+"PREFERENCES TITLE CONTACT"                         = "Des questions ? Envoyez moi un email !";
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Utiliser le mode de couleur par défaut lors d'un aperçu, si l'option est disponible pour le périphérique en cours. Ceci permet d'avoir des aperçus cohérents quelles que soient les options que vous définissez, mais peut augmenter le temps d'acquisition.";
 "PREFERENCES MESSAGE SHOW INCOMPLETE SCAN"          = "Si activé, le rendu partiel du document sera affiché à l'écran pendant une opération d'acquisition ou d'aperçu. Cette option est déconseillée lors de l'acquisition avec une grande résolution ou sur les vieux appareils.";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
+
+"MAIL COPY PASTEBOARD NAME"     = "Copier l'adresse email";
+"CONTACT SUBJECT ABOUT APP %@"  = "À props de %@";
 
 // Gallery
 "GALLERY EMPTY TITLE"       = "Pas de documents";
