--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -54,12 +54,14 @@
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Preview with default color mode";
 "PREFERENCES TITLE SHOW INCOMPLETE SCAN"            = "Show incomplete scan image";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Show advanced options";
+"PREFERENCES TITLE SAVE AS PNG"                     = "Save as PNG";
 "PREFERENCES TITLE VERSION"                         = "Version";
 "PREFERENCES TITLE CONTACT"                         = "Got some questions? Drop me an email!";
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Will use the default color mode, if auto value is supported and option is found. Allows for more consistent render accross previews, whatever the option you set, but can reduce preview speed and reset other options depending on the device.";
 "PREFERENCES MESSAGE SHOW INCOMPLETE SCAN"          = "If enabled the incomplete image during a scan operation (preview or actual scan) will be displayed on screen. On an old device or when scanning with a high resolution this is not recommended.";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Some devices have advanced options, toggling this setting ON will allow you to access them.";
+"PREFERENCES MESSAGE SAVE AS PNG"                   = "By default scanned documents will be saved as JPEG images with a 90% quality factor. Toggle this setting to save as a lossless PNG file.";
 
 "MAIL COPY PASTEBOARD NAME"     = "Copy email to pasteboard";
 "CONTACT SUBJECT ABOUT APP %@"  = "About %@";
