--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -55,12 +55,14 @@
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Mode de couleurs par défaut";
 "PREFERENCES TITLE SHOW INCOMPLETE SCAN"            = "Afficher le scan incomplet";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Afficher les options avancées";
+"PREFERENCES TITLE SAVE AS PNG"                     = "Enregistrer en PNG";
 "PREFERENCES TITLE VERSION"                         = "Version";
 "PREFERENCES TITLE CONTACT"                         = "Des questions ? Envoyez moi un email !";
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Utiliser le mode de couleur par défaut lors d'un aperçu, si l'option est disponible pour le périphérique en cours. Ceci permet d'avoir des aperçus cohérents quelles que soient les options que vous définissez, mais peut augmenter le temps d'acquisition.";
 "PREFERENCES MESSAGE SHOW INCOMPLETE SCAN"          = "Si activé, le rendu partiel du document sera affiché à l'écran pendant une opération d'acquisition ou d'aperçu. Cette option est déconseillée lors de l'acquisition avec une grande résolution ou sur les vieux appareils.";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
+"PREFERENCES MESSAGE SAVE AS PNG"                   = "Par défaut les documents scannés sont sauvegardés en JPEG avec un facteur de qualité de 90%. Activez ce paramètre pour enregistrer en PNG sans perte de qualité.";
 
 "MAIL COPY PASTEBOARD NAME"     = "Copier l'adresse email";
 "CONTACT SUBJECT ABOUT APP %@"  = "À props de %@";
