--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -34,6 +34,7 @@
 "ERROR MESSAGE NO IMAGE DATA"               = "No image data";
 "ERROR MESSAGE CANNOT GENERATE IMAGE"       = "Couldn't generate image";
 "ERROR MESSAGE UNSUPPORTED CHANNELS"        = "Unsupported channel type";
+"ERROR MESSAGE PDF NOT CREATED"             = "PDF file couldn't be generated";
 
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Hosts";
