--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -34,7 +34,7 @@
 "ERROR MESSAGE NO IMAGE DATA"               = "Pas de données image";
 "ERROR MESSAGE CANNOT GENERATE IMAGE"       = "L'image n'a pas pu être générée";
 "ERROR MESSAGE UNSUPPORTED CHANNELS"        = "Type d'image non supporté";
-
+"ERROR MESSAGE PDF NOT CREATED"             = "Le fichier PDF n'a pas pu être généré";
 
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Serveurs";
