Add PDF generator error localizations

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -36,6 +36,14 @@
 "ERROR MESSAGE UNSUPPORTED CHANNELS"        = "Unsupported channel type";
 "ERROR MESSAGE PDF NOT CREATED"             = "PDF file couldn't be generated";
 
+// PDF Errors
+"ERROR MESSAGE PDF NO IMAGES"               = "No images selected";
+"ERROR MESSAGE PDF COULD NOT BE GENERATED"  = "PDF file couldn't be generated";
+"ERROR MESSAGE CANNOT OPEN IMAGES"          = "Cannot open images";
+"ERROR MESSAGE CANNOT OPEN IMAGE %@"        = "Cannot open image file %@";
+"ERROR MESSAGE INVALID IMAGE DATA %@"       = "Invalid image data for file %@";
+"ERROR MESSAGE INVALID JPEG QUALITY %.0lf"  = "Invalid JPEG quality selected: %.0lf";
+
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Hosts";
 "DEVICES SECTION DEVICES"   = "Devices";
