--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -36,6 +36,14 @@
 "ERROR MESSAGE UNSUPPORTED CHANNELS"        = "Type d'image non supporté";
 "ERROR MESSAGE PDF NOT CREATED"             = "Le fichier PDF n'a pas pu être généré";
 
+// PDF Errors
+"ERROR MESSAGE PDF NO IMAGES"               = "Aucune image sélectionnée";
+"ERROR MESSAGE PDF COULD NOT BE GENERATED"  = "PDF file couldn't be generated";
+"ERROR MESSAGE CANNOT OPEN IMAGES"          = "Impossible d'ouvrir les images";
+"ERROR MESSAGE CANNOT OPEN IMAGE %@"        = "Impossible d'ouvrir l'image %@";
+"ERROR MESSAGE INVALID IMAGE DATA %@"       = "Données images invalides dans le fichier %@";
+"ERROR MESSAGE INVALID JPEG QUALITY %.0lf"  = "Qualité JPEG sélectionnée invalide : %.0lf";
+
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Serveurs";
 "DEVICES SECTION DEVICES"   = "Périphériques";
