--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -72,8 +72,8 @@
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Some devices have advanced options, toggling this setting ON will allow you to access them.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "By default scanned documents will be saved as JPEG images with a 90% quality factor. Toggle this setting to save as a lossless PNG file.";
 
-"MAIL COPY PASTEBOARD NAME"     = "Copy email to pasteboard";
-"CONTACT SUBJECT ABOUT APP %@"  = "About %@";
+"MAIL COPY PASTEBOARD NAME"         = "Copy email to pasteboard";
+"CONTACT SUBJECT ABOUT APP %@ %@"   = "About %@ %@";
 
 // Gallery
 "GALLERY EMPTY TITLE"       = "No images yet";
