--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -72,8 +72,8 @@
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "Par défaut les documents scannés sont sauvegardés en JPEG avec un facteur de qualité de 90%. Activez ce paramètre pour enregistrer en PNG sans perte de qualité.";
 
-"MAIL COPY PASTEBOARD NAME"     = "Copier l'adresse email";
-"CONTACT SUBJECT ABOUT APP %@"  = "À props de %@";
+"MAIL COPY PASTEBOARD NAME"         = "Copier l'adresse email";
+"CONTACT SUBJECT ABOUT APP %@ %@"   = "À props de %@ %@";
 
 // Gallery
 "GALLERY EMPTY TITLE"       = "Pas de documents";
