Update user facing strings, fixing in the same commit invalid string option changes

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -86,8 +86,8 @@
 
 "DIALOG TITLE SCANNED IMAGE"    = "Scanned image";
 
-"OPTION BOOL ON"    = "On";
-"OPTION BOOL OFF"   = "Off";
+"OPTION BOOL ON"    = "Activé";
+"OPTION BOOL OFF"   = "Désactivé";
 "OPTION VALUE AUTO" = "Auto";
 
 // Custom activities
