--- a/SaneSwift/Localizable/en.lproj/Localizable.strings
+++ b/SaneSwift/Localizable/en.lproj/Localizable.strings
@@ -25,3 +25,6 @@
 "OPTION CONSTRAINED RANGE FROM TO %@ %@"            = "Constrained to range from %@ to %@";
 "OPTION CONSTRAINED RANGE FROM TO STEP %@ %@ %@"    = "Constrained to range from %@ to %@ with step of %@";
 "OPTION CONSTRAINED NOT CONSTRAINED"                = "Not constrained";
+
+"OPTION BOOL ON"    = "On";
+"OPTION BOOL OFF"   = "Off";
