--- a/SaneSwift/Localizable/fr.lproj/Localizable.strings
+++ b/SaneSwift/Localizable/fr.lproj/Localizable.strings
@@ -25,3 +25,6 @@
 "OPTION CONSTRAINED RANGE FROM TO %@ %@"            = "Contraint à un interval entre %@ et %@";
 "OPTION CONSTRAINED RANGE FROM TO STEP %@ %@ %@"    = "Contraint à un interval entre %@ et %@ par pas de %@";
 "OPTION CONSTRAINED NOT CONSTRAINED"                = "Sans contrainte";
+
+"OPTION BOOL ON"    = "Activé";
+"OPTION BOOL OFF"   = "Désactivé";
