Update MHGalleryItem to custom GalleryItem, create our own basic gallery VCs

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -68,6 +68,7 @@
 
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "All scans";
+"GALLERY IMAGE %d OF %d"    = "%d of %d";
 
 // Dialogs
 "DIALOG TITLE ADD HOST"             = "Add a host";
