--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -71,6 +71,7 @@
 
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "Documents";
+"GALLERY IMAGE %d OF %d"    = "%d sur %d";
 
 // Dialogs
 "DIALOG TITLE ADD HOST"             = "Ajouter";
