Add selection support to the image gallery

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -69,6 +69,9 @@
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "All scans";
 "GALLERY IMAGE %d OF %d"    = "%d of %d";
+"GALLERY OVERVIEW SELECTED NONE"        = "No photo selected";
+"GALLERY OVERVIEW SELECTED SINGULAR %d" = "%d photo selected";
+"GALLERY OVERVIEW SELECTED PLURAL %d"   = "%d photos selected";
 
 // Dialogs
 "DIALOG TITLE ADD HOST"             = "Add a host";
