--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -66,12 +66,12 @@
 "GALLERY EMPTY TITLE"       = "Pas de documents";
 "GALLERY EMPTY SUBTITLE"    = "Scannez un document en utilisant un des périphériques sur la gauche et il apparaitra ici";
 
-"shareview.title.select.plural"   = "%@ documents sélectionnés";
-"shareview.title.select.singular" = "%@ document sélectionné";
-
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "Documents";
 "GALLERY IMAGE %d OF %d"    = "%d sur %d";
+"GALLERY OVERVIEW SELECTED NONE"        = "Aucun document sélectionné";
+"GALLERY OVERVIEW SELECTED SINGULAR %d" = "%d document sélectionné";
+"GALLERY OVERVIEW SELECTED PLURAL %d"   = "%d documents sélectionnés";
 
 // Dialogs
 "DIALOG TITLE ADD HOST"             = "Ajouter";
