--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -69,9 +69,9 @@
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "All scans";
 "GALLERY IMAGE %d OF %d"    = "%d of %d";
-"GALLERY OVERVIEW SELECTED NONE"        = "No photo selected";
-"GALLERY OVERVIEW SELECTED SINGULAR %d" = "%d photo selected";
-"GALLERY OVERVIEW SELECTED PLURAL %d"   = "%d photos selected";
+"GALLERY OVERVIEW SELECTED NONE"        = "No scan selected";
+"GALLERY OVERVIEW SELECTED SINGULAR %d" = "%d scan selected";
+"GALLERY OVERVIEW SELECTED PLURAL %d"   = "%d scans selected";
 
 // Dialogs
 "DIALOG TITLE ADD HOST"             = "Add a host";
@@ -79,6 +79,8 @@
 
 "DIALOG TITLE AUTH"                 = "Authentication needed";
 "DIALOG MESSAGE AUTH %@"            = "Please enter the username and password for %@";
+"DIALOG AUTH PLACEHOLDER USERNAME"  = "Username";
+"DIALOG AUTH PLACEHOLDER PASSWORD"  = "Password";
 
 "DIALOG TITLE DELETE SCAN"          = "Confirmation";
 "DIALOG MESSAGE DELETE SCAN"        = "Are you sure you want to delete this scan?";
