--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -79,6 +79,8 @@
 
 "DIALOG TITLE AUTH"                 = "Authentification requise";
 "DIALOG MESSAGE AUTH %@"            = "Veuillez entrer votre nom d'utilisateur et mot de passe pour %@";
+"DIALOG AUTH PLACEHOLDER USERNAME"  = "Utilisateur";
+"DIALOG AUTH PLACEHOLDER PASSWORD"  = "Mot de passe";
 
 "DIALOG TITLE DELETE SCAN"          = "Confirmation";
 "DIALOG MESSAGE DELETE SCAN"        = "Etes vous sûr de vouloir supprimer ce document ?";
