Fix catalyst multi select

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -64,6 +64,7 @@
 // Gallery
 "GALLERY EMPTY TITLE"       = "No images yet";
 "GALLERY EMPTY SUBTITLE"    = "Scan a document with one of the devices on the left and it will appear here";
+"GALLERY HINT CATALYST MULTI SELECT"    = "Press option to select multiple elements";
 
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "All scans";
