--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -64,6 +64,7 @@
 // Gallery
 "GALLERY EMPTY TITLE"       = "Pas de documents";
 "GALLERY EMPTY SUBTITLE"    = "Scannez un document en utilisant un des périphériques sur la gauche et il apparaitra ici";
+"GALLERY HINT CATALYST MULTI SELECT"    = "Appuyez sur option pour selectionner plusieurs éléments";
 
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "Documents";
