Update preview style to remove SVProgressHUD

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -17,10 +17,13 @@
 "ACTION SCAN"               = "Scan";
 "ACTION PRESS"              = "Press";
 "ACTION SET VALUE"          = "Update value";
+"ACTION HINT TAP TO CANCEL" = "Tap to cancel";
 
 "LOADING"           = "Loading...";
 "SCANNING"          = "Scanning...";
 "PREVIEWING"        = "Generating preview...";
+"PREVIEWING %f"     = "Generating preview... (%.f%%)";
+"CANCELLING"        = "Cancelling...";
 
 // PDF Errors
 "ERROR MESSAGE PDF NO IMAGES"               = "No images selected";
