--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -17,10 +17,13 @@
 "ACTION SCAN"               = "Scanner";
 "ACTION PRESS"              = "Presser";
 "ACTION SET VALUE"          = "Mettre à jour";
+"ACTION HINT TAP TO CANCEL" = "Tapper pour annuler";
 
 "LOADING"           = "Chargement...";
 "SCANNING"          = "Acquisition...";
 "PREVIEWING"        = "Aperçu en cours...";
+"PREVIEWING %f"     = "Aperçu en cours... (%.f%%)";
+"CANCELLING"        = "Annulation...";
 
 // PDF Errors
 "ERROR MESSAGE PDF NO IMAGES"               = "Aucune image sélectionnée";
