Add ability to save DeviceAuthentication

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -9,6 +9,7 @@
 // Common actions
 "ACTION CANCEL"             = "Cancel";
 "ACTION CONTINUE"           = "Continue";
+"ACTION CONTINUE REMEMBER"  = "Remember";
 "ACTION CLOSE"              = "Close";
 "ACTION DELETE"             = "Delete";
 "ACTION REMOVE"             = "Remove";
