--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -9,6 +9,7 @@
 // Common actions
 "ACTION CANCEL"             = "Annuler";
 "ACTION CONTINUE"           = "Continuer";
+"ACTION CONTINUE REMEMBER"  = "Sauvegarder";
 "ACTION CLOSE"              = "Fermer";
 "ACTION DELETE"             = "Supprimer";
 "ACTION REMOVE"             = "Supprimer";
