Rework preview and scan features to allow cancelling and to remove HUD when not needed

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -22,6 +22,7 @@
 
 "LOADING"           = "Loading...";
 "SCANNING"          = "Scanning...";
+"SCANNING %f"       = "Scanning... (%.f%%)";
 "PREVIEWING"        = "Generating preview...";
 "PREVIEWING %f"     = "Generating preview... (%.f%%)";
 "CANCELLING"        = "Cancelling...";
