--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -22,6 +22,7 @@
 
 "LOADING"           = "Chargement...";
 "SCANNING"          = "Acquisition...";
+"SCANNING %f"       = "Acquisition... (%.f%%)";
 "PREVIEWING"        = "Aperçu en cours...";
 "PREVIEWING %f"     = "Aperçu en cours... (%.f%%)";
 "CANCELLING"        = "Annulation...";
