Add DevicePreviewVC to use in sidebar in catalyst and iPad instead of the gallery

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -44,6 +44,10 @@
 "DEVICE SECTION PREVIEW"        = "Preview";
 "DEVICE BUTTON UPDATE PREVIEW"  = "Update preview";
 
+// Preview VC
+"PREVIEW VC NO DEVICE TITLE"    = "Select a device";
+"PREVIEW VC NO DEVICE SUBTITLE" = "After selecting a device you'll have the ability to preview then scan a document";
+
 // Preferences
 "PREFERENCES TITLE"         = "Preferences";
 
