--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -44,6 +44,10 @@
 "DEVICE SECTION PREVIEW"        = "Aperçu";
 "DEVICE BUTTON UPDATE PREVIEW"  = "Générer l'aperçu";
 
+// Preview VC
+"PREVIEW VC NO DEVICE TITLE"    = "Selectionnez un appareil";
+"PREVIEW VC NO DEVICE SUBTITLE" = "Vous pourrez ensuite générer un aperçu ou scanner un document";
+
 // Preferences
 "PREFERENCES TITLE"         = "Préférences";
 
