--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -68,6 +68,9 @@
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "By default scanned documents will be saved as JPEG images with a 90% quality factor. Toggle this setting to save as a lossless PNG file.";
 
 "MAIL COPY PASTEBOARD NAME"         = "Copy email to pasteboard";
+"MAIL ALERT TITLE"                  = "Send an email";
+"MAIL ALERT MESSAGE"                = "Choose your preferred service";
+"MAIL ALERT CANCEL"                 = "Cancel";
 "CONTACT SUBJECT ABOUT APP %@ %@"   = "About %@ %@";
 
 // Gallery
