--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -68,6 +68,9 @@
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "Par défaut les documents scannés sont sauvegardés en JPEG avec un facteur de qualité de 90%. Activez ce paramètre pour enregistrer en PNG sans perte de qualité.";
 
 "MAIL COPY PASTEBOARD NAME"         = "Copier l'adresse email";
+"MAIL ALERT TITLE"                  = "Envoyer un email";
+"MAIL ALERT MESSAGE"                = "Choisissez votre service préféré";
+"MAIL ALERT CANCEL"                 = "Cancel";
 "CONTACT SUBJECT ABOUT APP %@ %@"   = "À props de %@ %@";
 
 // Gallery
