Advert issues when using default image intensity

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -62,7 +62,7 @@
 "PREFERENCES TITLE VERSION"                         = "Version";
 "PREFERENCES TITLE CONTACT"                         = "Got some questions? Drop me an email!";
 
-"PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Will use the default color mode, if auto value is supported and option is found. Allows for more consistent render accross previews, whatever the option you set, but can reduce preview speed and reset other options depending on the device.";
+"PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Will use the default color mode and image intensity, if those options are found and support using an automatic value. Allows for more consistent render accross previews, whatever the option you set, but can reduce preview speed and reset other options depending on the device. This can result in black images when scanning after a preview on some SANE backends (e.g. Pixma 1.0.24).";
 "PREFERENCES MESSAGE SHOW INCOMPLETE SCAN"          = "If enabled the incomplete image during a scan operation (preview or actual scan) will be displayed on screen. On an old device or when scanning with a high resolution this is not recommended.";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Some devices have advanced options, toggling this setting ON will allow you to access them.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "By default scanned documents will be saved as JPEG images with a 90% quality factor. Toggle this setting to save as a lossless PNG file.";
