--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -62,7 +62,7 @@
 "PREFERENCES TITLE VERSION"                         = "Version";
 "PREFERENCES TITLE CONTACT"                         = "Des questions ? Envoyez moi un email !";
 
-"PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Utiliser le mode de couleur par défaut lors d'un aperçu, si l'option est disponible pour le périphérique en cours. Ceci permet d'avoir des aperçus cohérents quelles que soient les options que vous définissez, mais peut augmenter le temps d'acquisition.";
+"PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Utiliser le mode de couleur et l'intensité par défaut lors d'un aperçu, si ces options sont disponibles et supportent un réglage automatique.. Ceci permet d'avoir des aperçus cohérents quelles que soient les options que vous définissez, mais peut augmenter le temps d'acquisition. Ceci peut créer des images noires en scannant après un aperçu sur certains pilotes SANE (ex: Pixma 1.0.24)";
 "PREFERENCES MESSAGE SHOW INCOMPLETE SCAN"          = "Si activé, le rendu partiel du document sera affiché à l'écran pendant une opération d'acquisition ou d'aperçu. Cette option est déconseillée lors de l'acquisition avec une grande résolution ou sur les vieux appareils.";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "Par défaut les documents scannés sont sauvegardés en JPEG avec un facteur de qualité de 90%. Activez ce paramètre pour enregistrer en PNG sans perte de qualité.";
