Add contextual menu to thumbs gallery

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "ACTION PRESS"              = "Press";
 "ACTION SET VALUE"          = "Update value";
 "ACTION HINT TAP TO CANCEL" = "Tap to cancel";
+"ACTION OPEN"               = "Open";
 
 "LOADING"           = "Loading...";
 "SCANNING"          = "Scanning...";
