--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "ACTION PRESS"              = "Presser";
 "ACTION SET VALUE"          = "Mettre à jour";
 "ACTION HINT TAP TO CANCEL" = "Tapper pour annuler";
+"ACTION OPEN"               = "Ouvrir";
 
 "LOADING"           = "Chargement...";
 "SCANNING"          = "Acquisition...";
