Add catalyst menu items

--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -111,3 +111,9 @@
 
 // Menu
 "MENU PREFERENCES"  = "Préférences...";
+"MENU REFRESH"      = "Rafraîchir";
+"MENU PREVIEW"      = "Aperçu";
+"MENU SCAN"         = "Scanner";
+"MENU ADD HOST"     = "Ajouter un hôte...";
+"MENU OPEN GALLERY" = "Ouvrir la gallerie d'images";
+"MENU ABORT"        = "Annuler l'opération en cours";
