--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -39,7 +39,7 @@
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Hosts";
 "DEVICES SECTION DEVICES"   = "Devices";
-"DEVICES ROW ADD HOST"      = "Add new host";
+"DEVICES ROW ADD HOST"      = "Add a new host";
 
 // Device screen
 "DEVICE SECTION PREVIEW"        = "Preview";
@@ -111,3 +111,9 @@
 
 // Menu
 "MENU PREFERENCES"  = "Preferences...";
+"MENU REFRESH"      = "Refresh";
+"MENU PREVIEW"      = "Preview";
+"MENU SCAN"         = "Scan";
+"MENU ADD HOST"     = "New host...";
+"MENU OPEN GALLERY" = "Open image gallery";
+"MENU ABORT"        = "Abort current operation";
