Misc style updates

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -27,6 +27,7 @@
 "PREVIEWING"        = "Generating preview...";
 "PREVIEWING %f"     = "Generating preview... (%.f%%)";
 "CANCELLING"        = "Cancelling...";
+"WARMING UP"        = "Warming up";
 
 // PDF Errors
 "ERROR MESSAGE PDF NO IMAGES"               = "No images selected";
