--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -27,6 +27,7 @@
 "PREVIEWING"        = "Aperçu en cours...";
 "PREVIEWING %f"     = "Aperçu en cours... (%.f%%)";
 "CANCELLING"        = "Annulation...";
+"WARMING UP"        = "Préchauffe";
 
 // PDF Errors
 "ERROR MESSAGE PDF NO IMAGES"               = "Aucune image sélectionnée";
