Cleanup analytics code

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -55,6 +55,7 @@
 
 "PREFERENCES SECTION SCAN"      = "Scan";
 "PREFERENCES SECTION PREVIEW"   = "Preview";
+"PREFERENCES SECTION ANALYTICS" = "Analytics";
 "PREFERENCES SECTION ABOUT APP" = "About this app";
 
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Preview with default color mode";
@@ -62,10 +63,12 @@
 "PREFERENCES TITLE SAVE AS PNG"                     = "Save as PNG";
 "PREFERENCES TITLE VERSION"                         = "Version";
 "PREFERENCES TITLE CONTACT"                         = "Got some questions? Drop me an email!";
+"PREFERENCES TITLE ENABLE ANALYTICS"                = "App analytics";
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Will use the default color mode and image intensity, if those options are found and support using an automatic value. Allows for more consistent render accross previews, whatever the option you set, but can reduce preview speed and reset other options depending on the device. This can result in black images when scanning after a preview on some SANE backends (e.g. Pixma 1.0.24).";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Some devices have advanced options, toggling this setting ON will allow you to access them.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "By default scanned documents will be saved as JPEG images with a 90% quality factor. Toggle this setting to save as a lossless PNG file.";
+"PREFERENCES MESSAGE ENABLE ANALYTICS"              = "Each event will be sent along with your iOS version, device model and app version. Event-specific data are the number of hosts you have configured, the make of your scanner and possible errors you encountered.";
 
 "MAIL COPY PASTEBOARD NAME"         = "Copy email to pasteboard";
 "MAIL COPY PASTEBOARD SUCCESS"      = "Copied to your pasteboard";
