--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -55,6 +55,7 @@
 
 "PREFERENCES SECTION SCAN"      = "Acquisition";
 "PREFERENCES SECTION PREVIEW"   = "Aperçu";
+"PREFERENCES SECTION ANALYTICS" = "Statistiques";
 "PREFERENCES SECTION ABOUT APP" = "À propos";
 
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Mode de couleurs par défaut";
@@ -62,10 +63,12 @@
 "PREFERENCES TITLE SAVE AS PNG"                     = "Enregistrer en PNG";
 "PREFERENCES TITLE VERSION"                         = "Version";
 "PREFERENCES TITLE CONTACT"                         = "Des questions ? Envoyez moi un email !";
+"PREFERENCES TITLE ENABLE ANALYTICS"                = "Utilisation de l'app";
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Utiliser le mode de couleur et l'intensité par défaut lors d'un aperçu, si ces options sont disponibles et supportent un réglage automatique.. Ceci permet d'avoir des aperçus cohérents quelles que soient les options que vous définissez, mais peut augmenter le temps d'acquisition. Ceci peut créer des images noires en scannant après un aperçu sur certains pilotes SANE (ex: Pixma 1.0.24)";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "Par défaut les documents scannés sont sauvegardés en JPEG avec un facteur de qualité de 90%. Activez ce paramètre pour enregistrer en PNG sans perte de qualité.";
+"PREFERENCES MESSAGE ENABLE ANALYTICS"              = "Chaque événement est envoyé avec vottre version iOS, modèle d'appareil, et version de l'application. Les données spécifiques aux événements envoyés sont le nombre d'hôtes configurés, le modèle de votre scanner et les erreurs que vous pouvez rencontrer. ";
 
 "MAIL COPY PASTEBOARD NAME"         = "Copier l'adresse email";
 "MAIL COPY PASTEBOARD SUCCESS"      = "Copié dans le presse papier";
