Add permission dialog for app analytics

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -20,6 +20,8 @@
 "ACTION SET VALUE"          = "Update value";
 "ACTION HINT TAP TO CANCEL" = "Tap to cancel";
 "ACTION OPEN"               = "Open";
+"ACTION ANALYTICS YES"      = "Allow analytics";
+"ACTION ANALYTICS NO"       = "Don't ask again";
 
 "LOADING"           = "Loading...";
 "SCANNING"          = "Scanning...";
@@ -69,6 +71,8 @@
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Some devices have advanced options, toggling this setting ON will allow you to access them.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "By default scanned documents will be saved as JPEG images with a 90% quality factor. Toggle this setting to save as a lossless PNG file.";
 "PREFERENCES MESSAGE ENABLE ANALYTICS"              = "Each event will be sent along with your iOS version, device model and app version. Event-specific data are the number of hosts you have configured, the make of your scanner and possible errors you encountered.";
+
+"ANALYTICS ALERT TITLE"             = "Do you want to enable anonymous app analytics?";
 
 "MAIL COPY PASTEBOARD NAME"         = "Copy email to pasteboard";
 "MAIL COPY PASTEBOARD SUCCESS"      = "Copied to your pasteboard";
