--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -20,6 +20,8 @@
 "ACTION SET VALUE"          = "Mettre à jour";
 "ACTION HINT TAP TO CANCEL" = "Tapper pour annuler";
 "ACTION OPEN"               = "Ouvrir";
+"ACTION ANALYTICS YES"      = "Autoriser les statistiques";
+"ACTION ANALYTICS NO"       = "Ne plus me demander";
 
 "LOADING"           = "Chargement...";
 "SCANNING"          = "Acquisition...";
@@ -69,6 +71,8 @@
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "Par défaut les documents scannés sont sauvegardés en JPEG avec un facteur de qualité de 90%. Activez ce paramètre pour enregistrer en PNG sans perte de qualité.";
 "PREFERENCES MESSAGE ENABLE ANALYTICS"              = "Chaque événement est envoyé avec vottre version iOS, modèle d'appareil, et version de l'application. Les données spécifiques aux événements envoyés sont le nombre d'hôtes configurés, le modèle de votre scanner et les erreurs que vous pouvez rencontrer. ";
+
+"ANALYTICS ALERT TITLE"             = "Voulez-vous autoriser l'envoi de statistiques anonymes ?";
 
 "MAIL COPY PASTEBOARD NAME"         = "Copier l'adresse email";
 "MAIL COPY PASTEBOARD SUCCESS"      = "Copié dans le presse papier";
