Fix mixed up translations

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -109,8 +109,8 @@
 
 "DIALOG TITLE COULDNT OPEN DEVICE"  = "Couldn't open device";
 
-"OPTION BOOL ON"    = "Activé";
-"OPTION BOOL OFF"   = "Désactivé";
+"OPTION BOOL ON"    = "On";
+"OPTION BOOL OFF"   = "Off";
 "OPTION VALUE AUTO" = "Auto";
 
 // Custom activities
