--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -109,8 +109,8 @@
 
 "DIALOG TITLE COULDNT OPEN DEVICE"  = "Accès au périphérique échoué";
 
-"OPTION BOOL ON"    = "On";
-"OPTION BOOL OFF"   = "Off";
+"OPTION BOOL ON"    = "Activé";
+"OPTION BOOL OFF"   = "Désactivé";
 "OPTION VALUE AUTO" = "Auto";
 
 // Custom activities
