Small UI fixes on DevicesVC

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -42,7 +42,7 @@
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Hosts";
 "DEVICES SECTION DEVICES"   = "Devices";
-"DEVICES ROW ADD HOST"      = "Add a new host";
+"DEVICES ROW ADD HOST"      = "Add a new host...";
 
 // Device screen
 "DEVICE SECTION PREVIEW"        = "Preview";
