--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -42,7 +42,7 @@
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Serveurs";
 "DEVICES SECTION DEVICES"   = "Périphériques";
-"DEVICES ROW ADD HOST"      = "Ajouter";
+"DEVICES ROW ADD HOST"      = "Ajouter...";
 
 // Device screen
 "DEVICE SECTION PREVIEW"        = "Aperçu";
