Update Sane backends to 1.2.1

--- a/Sane/all/translations/it.lproj/sane_strings.po
+++ b/Sane/all/translations/it.lproj/sane_strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: sane-backends 1.0.18\n"
 "Report-Msgid-Bugs-To: sane-devel@alioth-lists.debian.net\n"
 "POT-Creation-Date: 2021-09-20 20:08-0700\n"
-"PO-Revision-Date: 2020-08-19 12:06+0200\n"
+"PO-Revision-Date: 2022-12-03 16:17-0500\n"
 "Last-Translator: Vincenzo Reale <smart2128@baslug.org>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 20.08.0\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: include/sane/saneopts.h:156
 #, no-c-format
@@ -182,7 +182,7 @@ msgstr "Intensità del blu"
 #: include/sane/saneopts.h:185
 #, no-c-format
 msgid "Brightness"
-msgstr "Brillantezza"
+msgstr "Luminosità"
 
 #: include/sane/saneopts.h:186
 #, no-c-format
@@ -305,7 +305,7 @@ msgstr "Negativo"
 #: include/sane/saneopts.h:209
 #, no-c-format
 msgid "Quality calibration"
-msgstr "Qualità della calibrazione"
+msgstr "Calibrazione della qualità"
 
 #: include/sane/saneopts.h:210
 #, no-c-format
