Rework a bit the code in PrefVC, add sane backends version in about app

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -63,7 +63,8 @@
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Preview with default color mode";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Show advanced options";
 "PREFERENCES TITLE SAVE AS PNG"                     = "Save as PNG";
-"PREFERENCES TITLE VERSION"                         = "Version";
+"PREFERENCES TITLE APP VERSION"                     = "App version";
+"PREFERENCES TITLE SANE VERSION"                    = "Sane backends version";
 "PREFERENCES TITLE CONTACT"                         = "Got some questions? Drop me an email!";
 "PREFERENCES TITLE ENABLE ANALYTICS"                = "App analytics";
 
