--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -63,7 +63,8 @@
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Mode de couleurs par défaut";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Afficher les options avancées";
 "PREFERENCES TITLE SAVE AS PNG"                     = "Enregistrer en PNG";
-"PREFERENCES TITLE VERSION"                         = "Version";
+"PREFERENCES TITLE APP VERSION"                     = "Version de l'app";
+"PREFERENCES TITLE SANE VERSION"                    = "Version de Sane backends";
 "PREFERENCES TITLE CONTACT"                         = "Des questions ? Envoyez moi un email !";
 "PREFERENCES TITLE ENABLE ANALYTICS"                = "Utilisation de l'app";
 
