Support three way images and multiple documents scanned at once

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -26,6 +26,7 @@
 "LOADING"           = "Loading...";
 "SCANNING"          = "Scanning...";
 "SCANNING %f"       = "Scanning... (%.f%%)";
+"SCANNING %f %d"    = "Scanning... (%.f%%, finished %d documents)";
 "PREVIEWING"        = "Generating preview...";
 "PREVIEWING %f"     = "Generating preview... (%.f%%)";
 "CANCELLING"        = "Cancelling...";
