--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -26,6 +26,7 @@
 "LOADING"           = "Chargement...";
 "SCANNING"          = "Acquisition...";
 "SCANNING %f"       = "Acquisition... (%.f%%)";
+"SCANNING %f %d"    = "Scanning... (%.f%%, %d documents finis)";
 "PREVIEWING"        = "Aperçu en cours...";
 "PREVIEWING %f"     = "Aperçu en cours... (%.f%%)";
 "CANCELLING"        = "Annulation...";
