Cleanup completion blocks and error typing

--- a/SaneSwift/Localizable/fr.lproj/Localizable.strings
+++ b/SaneSwift/Localizable/fr.lproj/Localizable.strings
@@ -10,6 +10,7 @@
 "ERROR MESSAGE SANE ERROR"                  = "Erreur SANE";
 "ERROR MESSAGE USER CANCELLED"              = "Opération annulée";
 "ERROR MESSAGE DEVICE NOT OPENED"           = "Le périphérique n'est pas disponible";
+"ERROR MESSAGE COULDNT GET OPTIONS"         = "Ne peut pas lire les options";
 "ERROR MESSAGE GET VALUE TYPE BUTTON"       = "Ne peut pas lire la valeur d'une option de type boutton";
 "ERROR MESSAGE GET VALUE TYPE GROUP"        = "Ne peut pas lire la valeur d'une option de type groupe";
 "ERROR MESSAGE SET VALUE TYPE GROUP"        = "Ne peut pas définir la valeur d'une option de type groupe";
