--- a/SaneSwift/Localizable/en.lproj/Localizable.strings
+++ b/SaneSwift/Localizable/en.lproj/Localizable.strings
@@ -10,6 +10,7 @@
 "ERROR MESSAGE SANE ERROR"                  = "SANE error";
 "ERROR MESSAGE USER CANCELLED"              = "Operation canceled";
 "ERROR MESSAGE DEVICE NOT OPENED"           = "Device is not opened";
+"ERROR MESSAGE COULDNT GET OPTIONS"         = "Couldn't obtain options";
 "ERROR MESSAGE GET VALUE TYPE BUTTON"       = "Cannot get the value of a button option";
 "ERROR MESSAGE GET VALUE TYPE GROUP"        = "Cannot get the value of a group option";
 "ERROR MESSAGE SET VALUE TYPE GROUP"        = "Cannot set the value of a group option";
